Fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -909,7 +909,14 @@ h2 {
   margin: 0;
   padding: 30px 0;
   font-weight: 1000;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  text-shadow: 0 0 7px #fff,
+ 0 0 10px #fff,
+ 0 0 21px #fff,
+ 0 0 42px #0fa,
+ 0 0 82px #0fa,
+ 0 0 92px #0fa,
+ 0 0 102px #0fa,
+ 0 0 151px #0fa;
 }
 
 .flex__container {
@@ -1016,8 +1023,22 @@ h2 {
   border-style: 0 0 15px #080808;
   z-index: 1;
   border: 3px solid #08f9f1;
-  -webkit-box-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
-          box-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  -webkit-box-shadow: 0 0 7px #fff,
+ 0 0 10px #fff,
+ 0 0 21px #fff,
+ 0 0 42px #0fa,
+ 0 0 82px #0fa,
+ 0 0 92px #0fa,
+ 0 0 102px #0fa,
+ 0 0 151px #0fa;
+          box-shadow: 0 0 7px #fff,
+ 0 0 10px #fff,
+ 0 0 21px #fff,
+ 0 0 42px #0fa,
+ 0 0 82px #0fa,
+ 0 0 92px #0fa,
+ 0 0 102px #0fa,
+ 0 0 151px #0fa;
 }
 
 .timage__title {
@@ -1165,7 +1186,14 @@ h2 {
 
 .navbar__container li a {
   text-decoration: none;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  text-shadow: 0 0 7px #fff,
+ 0 0 10px #fff,
+ 0 0 21px #fff,
+ 0 0 42px #0fa,
+ 0 0 82px #0fa,
+ 0 0 92px #0fa,
+ 0 0 102px #0fa,
+ 0 0 151px #0fa;
 }
 
 .navbar__logoContainer {
@@ -1592,12 +1620,15 @@ h2 {
 
 html {
   height: auto;
-  max-width: 100vw;
+  max-width: 100vw ;
+  overflow-x: hidden ;
 }
 
 body {
   height: 100%;
   margin: 0;
   font-family: Montserrat, Aleo, Helvetica, Arial, sans-serif !important;
+  max-width: 100vw ;
+  overflow-x: hidden ;
 }
 /*# sourceMappingURL=main.css.map */
